--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
             <div class="dropdown2">
-                <button onclick="myFunction()" class="dropbtn2">Products</button>
+                <button onclick="myFunction()" class="dropbtn2">Products ></button>
                 <div id="myDropdown" class="dropdown-content2" style="left:auto;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>                    
