--- a/packages.htm
+++ b/packages.htm
@@ -7,15 +7,43 @@
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
 
+    <script>
+        /* When the user clicks on the button,
+        toggle between hiding and showing the dropdown content */
+        function myFunction() {
+            document.getElementById("myDropdown").classList.toggle("show");
+        }
+
+        // Close the dropdown menu if the user clicks outside of it
+        window.onclick = function (event) {
+            if (!event.target.matches('.dropbtn2')) {
+
+                var dropdowns = document.getElementsByClassName("dropdown-content2");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 
 <body>
+
     <div class="dropdown" style="float:left;">
         <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-            <a href="assets.htm">Assets</a>
-            <a href="packages.htm">Packages</a>
+            <div class="dropdown2">
+                <button onclick="myFunction()" class="dropbtn2">Products ></button>
+                <div id="myDropdown" class="dropdown-content2" style="left:auto;">
+                    <a href="assets.htm">Assets</a>
+                    <a href="packages.htm">Packages</a>
+                </div>
+            </div>
             <a href="contactus.htm">Contact Us</a>
         </div>
     </div>
@@ -63,8 +91,8 @@
             </tr>
 
         </table>
-        </div>
-    <div class="overlay"  style="font-size: 10px">
+    </div>
+    <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
             <script>
