--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
    
     <div class="dropdown" style="float:left;">
         <a class="dropbtn1">Menu</a>
-        <div class="dropdown-content" style="text-align:center; left:0;">
+        <div class="dropdown-content" style="text-align:center;">
             <a href="index.htm">Home</a>
             <div class="dropdown2">
                 <button onclick="myFunction()" class="dropbtn2">Products ></button>
