--- a/packages.htm
+++ b/packages.htm
@@ -39,7 +39,7 @@
             <a href="index.htm">Home</a>
             <div class="dropdown2">
                 <button onclick="myFunction()" class="dropbtn2">Products ></button>
-                <div id="myDropdown" class="dropdown-content2" style="left:auto;">
+                <div id="myDropdown" class="dropdown-content2">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
                 </div>
