--- a/index.htm
+++ b/index.htm
@@ -34,11 +34,11 @@
    
     <div class="dropdown" style="float:left;">
         <a class="dropbtn1">Menu</a>
-        <div class="dropdown-content" style="text-align:center;">
+        <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
             <div class="dropdown2">
                 <button onclick="myFunction()" class="dropbtn2">Products ></button>
-                <div id="myDropdown" class="dropdown-content2" style="left:auto;">
+                <div id="myDropdown" class="dropdown-content2">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>                    
                 </div>
