--- a/contactus.htm
+++ b/contactus.htm
@@ -36,8 +36,8 @@
         <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-            <div class="dropdown2">
-                <button onclick="myFunction()" class="dropbtn2">Products ></button>
+            <div class="dropdown2" style="float:left;">
+                <a onclick="myFunction()" class="dropbtn2">Products ></a>
                 <div id="myDropdown" class="dropdown-content2">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
