--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
         <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-            <div class="dropdown2">
+            <div class="dropdown2" style="float:left;">
                 <a onclick="myFunction()" class="dropbtn2">Products ></a>
                 <div id="myDropdown" class="dropdown-content2">
                     <a href="assets.htm">Assets</a>
