--- a/assets.htm
+++ b/assets.htm
@@ -37,7 +37,7 @@
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
             <div class="dropdown2">
-                <button onclick="myFunction()" class="dropbtn2">Products ></button>
+                <a onclick="myFunction()" class="dropbtn2">Products ></a>
                 <div id="myDropdown" class="dropdown-content2">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
