--- a/packages.htm
+++ b/packages.htm
@@ -7,28 +7,7 @@
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
 
-    <script>
-        /* When the user clicks on the button,
-        toggle between hiding and showing the dropdown content */
-        function myFunction() {
-            document.getElementById("myDropdown").classList.toggle("show");
-        }
-
-        // Close the dropdown menu if the user clicks outside of it
-        window.onclick = function (event) {
-            if (!event.target.matches('.dropbtn2')) {
-
-                var dropdowns = document.getElementsByClassName("dropdown-content2");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show')) {
-                        openDropdown.classList.remove('show');
-                    }
-                }
-            }
-        }
-    </script>
+   
 </head>
 
 <body>
@@ -92,6 +71,7 @@
 
         </table>
     </div>
+    <script src="FirstScript.js"></script>
     <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
