--- a/packages.htm
+++ b/packages.htm
@@ -13,11 +13,11 @@
 <body>
 
     <div class="dropdown" style="float:left;">
-        <a class="dropbtn1">Menu ></a>
+        <a class="dropbtn1">Menu &#8594;</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
             <div class="dropdown2">
-                <a onclick="myFunction()" class="dropbtn2">Products ></a>
+                <a onclick="myFunction()" class="dropbtn2">Products &#8594;</a>
                 <div id="myDropdown" class="dropdown-content2">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
