--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,27 @@
   <link rel="stylesheet" type="text/css" href="Style2.css">
   <title>Dimension Assets</title>
   <meta name="description" content="HTML5 Template">
-   
+   <script>/* When the user clicks on the button,
+        toggle between hiding and showing the dropdown content */
+       function myFunction() {
+           document.getElementById("myDropdown").classList.toggle("show");
+           document.getElementById("myDropdown").innerHTML = "Products &#8628;";
+       }
+
+       // Close the dropdown menu if the user clicks outside of it
+       window.onclick = function (event) {
+           if (!event.target.matches('.dropbtn2')) {
+               document.getElementById("myDropdown").innerHTML = "Products &#8594;";
+               var dropdowns = document.getElementsByClassName("dropdown-content2");
+               var i;
+               for (i = 0; i < dropdowns.length; i++) {
+                   var openDropdown = dropdowns[i];
+                   if (openDropdown.classList.contains('show')) {
+                       openDropdown.classList.remove('show');
+                   }
+               }
+           }
+       }</script>
 </head>
 
 <body>
