--- a/packages.htm
+++ b/packages.htm
@@ -36,7 +36,7 @@
 
     <div class="dropdown" style="float:left;">
         <a class="dropbtn1">Menu &#8594;</a>
-        <div class="dropdown-content" style="text-align:center; left:0;">
+        <div class="dropdown-content" style="text-align:center; left:10px;">
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
