--- a/contactus.htm
+++ b/contactus.htm
@@ -117,6 +117,7 @@
 
         </form>
     </div>
+    <script src="FirstScript.js"></script>
     <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
