--- a/contactus.htm
+++ b/contactus.htm
@@ -17,7 +17,7 @@
        // Close the dropdown menu if the user clicks outside of it
        window.onclick = function (event) {
            if (!event.target.matches('.dropbtn2')) {
-               document.getElementById("myDropdown").innerHTML = "Products &#8594;";
+               document.getElementById("productsLink").innerHTML = "Products &#8594;";
                var dropdowns = document.getElementsByClassName("dropdown-content2");
                var i;
                for (i = 0; i < dropdowns.length; i++) {
