--- a/packages.htm
+++ b/packages.htm
@@ -40,7 +40,7 @@
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
                 <a onclick="myFunction()" id="productsLink" class="dropbtn2">Products &#8594;</a>
-                <div id="myDropdown" class="dropdown-content2">
+                <div id="myDropdown" class="dropdown-content2" style="left:10px;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
                 </div>
