--- a/contactus.htm
+++ b/contactus.htm
@@ -9,7 +9,7 @@
     <script>
 /* When the user clicks on the button,
         toggle between hiding and showing the dropdown content */
-       function myFunction() {
+       function productMenu() {
            document.getElementById("myDropdown").classList.toggle("show");
            document.getElementById("productsLink").innerHTML = "Products &#8628;";
        }
@@ -39,7 +39,7 @@
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
-                <a onclick="myFunction()" id="productsLink" class="dropbtn2">Products &#8594;</a>
+                <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
                 <div id="myDropdown" class="dropdown-content2" style="left:10px;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
