--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 
        // Close the dropdown menu if the user clicks outside of it
        window.onclick = function (event) {
-          
+           if (!event.target.matches('.dropbtn2')) {
                document.getElementById("productsLink").innerHTML = "Products &#8594;";
                var dropdowns = document.getElementsByClassName("dropdown-content2");
                var i;
@@ -26,7 +26,7 @@
                        openDropdown.classList.remove('show');
                    }
                }
-           
+           }
        }
     </script>
 </head>
