--- a/index.htm
+++ b/index.htm
@@ -9,9 +9,13 @@
     <script>
 /* When the user clicks on the button,
         toggle between hiding and showing the dropdown content */
-       function productMenu() {
-           document.getElementById("myDropdown").classList.toggle("show");
-           document.getElementById("productsLink").innerHTML = "Products &#8628;";
+        function productMenu() {
+            document.getElementById("myDropdown").classList.toggle("show");
+            if (document.getElementById("productsLink").innerHTML != "Products &#8628;"){
+                document.getElementById("productsLink").innerHTML = "Products &#8628;";
+            }else{
+                document.getElementById("productsLink").innerHTML = "Products &#8594;";
+            }
        }
 
        // Close the dropdown menu if the user clicks outside of it
