--- a/contactus.htm
+++ b/contactus.htm
@@ -16,7 +16,17 @@
             }else{
                 document.getElementById("productsLink").innerHTML = "Products &#8594;";
             }
-       }
+        }
+
+        function mouseOverMenu()
+        {                   
+                document.getElementById("mainMenu").innerHTML = "Products &#8628;";         
+        }
+
+        function mouseLeaveMenu()
+        {           
+                document.getElementById("mainMenu").innerHTML = "Products &#8594;";           
+        }
 
        // Close the dropdown menu if the user clicks outside of it
        window.onclick = function (event) {
@@ -37,8 +47,8 @@
 
 <body>
 
-    <div class="dropdown" style="float:left;">
-        <a class="dropbtn1">Menu &#8594;</a>
+    <div onmouseover="mouseOverMenu()" onmouseout="mouseLeaveMenu()" class="dropdown" style="float:left;">
+        <a class="dropbtn1" id="mainMenu">Menu &#8594;</a>
         <div class="dropdown-content" style="text-align:center; left:10px;">
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
