--- a/contactus.htm
+++ b/contactus.htm
@@ -20,12 +20,12 @@
 
         function mouseOverMenu()
         {                   
-                document.getElementById("mainMenu").innerHTML = "Products &#8628;";         
+            document.getElementById("mainMenu").innerHTML = "Menu &#8628;";
         }
 
         function mouseLeaveMenu()
         {           
-                document.getElementById("mainMenu").innerHTML = "Products &#8594;";           
+            document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
         }
 
        // Close the dropdown menu if the user clicks outside of it
