--- a/contactus.htm
+++ b/contactus.htm
@@ -19,13 +19,17 @@
         }
 
         function mouseOverMenu()
-        {                   
+        {
             document.getElementById("mainMenu").innerHTML = "Menu &#8628;";
         }
 
         function mouseLeaveMenu()
-        {           
+        {
             document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
+            if (!document.getElementById("myDropdown").classList.toggle("show"))
+            {
+                productMenu();
+            }
         }
 
        // Close the dropdown menu if the user clicks outside of it
