--- a/assets.htm
+++ b/assets.htm
@@ -26,6 +26,10 @@
         function mouseLeaveMenu()
         {
             document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
+            if (!document.getElementById("myDropdown").classList.toggle("show"))
+            {
+                productMenu();
+            }
         }
 
        // Close the dropdown menu if the user clicks outside of it
