--- a/packages.htm
+++ b/packages.htm
@@ -20,12 +20,16 @@
 
         function mouseOverMenu()
         {
-                document.getElementById("mainMenu").innerHTML = "Menu &#8628;";
+            document.getElementById("mainMenu").innerHTML = "Menu &#8628;";
         }
 
         function mouseLeaveMenu()
         {
-                document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
+            document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
+            if (!document.getElementById("myDropdown").classList.toggle("show"))
+            {
+                productMenu();
+            }
         }
 
        // Close the dropdown menu if the user clicks outside of it
