--- a/packages.htm
+++ b/packages.htm
@@ -26,7 +26,7 @@
         function mouseLeaveMenu()
         {
             document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
-            if (!document.getElementById("myDropdown").classList.toggle("show"))
+            if (document.getElementById("myDropdown").classList.toggle("show"))
             {
                 productMenu();
             }
