--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
         toggle between hiding and showing the dropdown content */
         function productMenu() {
             document.getElementById("myDropdown").classList.toggle("show");
-            if (!document.getElementById("myDropdown").classList.toggle("show")) {
+            if (!document.getElementById("productsLink").innerHTML = "Products &#8628;") {
                 document.getElementById("productsLink").innerHTML = "Products &#8628;";
             }else{
                 document.getElementById("productsLink").innerHTML = "Products &#8594;";
