--- a/packages.htm
+++ b/packages.htm
@@ -11,11 +11,15 @@
         toggle between hiding and showing the dropdown content */
         function productMenu() {
             document.getElementById("myDropdown").classList.toggle("show");
-            if (document.getElementById("productsLink").innerHTML != "Products &#8628;"){
+            if (document.getElementById("productsLink").innerHTML != "Products &#8628;") {
                 document.getElementById("productsLink").innerHTML = "Products &#8628;";
             }else{
                 document.getElementById("productsLink").innerHTML = "Products &#8594;";
             }
+        }
+
+        function productMenuToggle() {
+            document.getElementById("myDropdown").classList.toggle("show");
         }
 
         function mouseOverMenu()
@@ -26,10 +30,7 @@
         function mouseLeaveMenu()
         {
             document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
-            if (document.getElementById("myDropdown").classList.toggle("show"))
-            {
-                productMenu();
-            }
+
         }
 
        // Close the dropdown menu if the user clicks outside of it
