--- a/index.htm
+++ b/index.htm
@@ -11,10 +11,10 @@
         toggle between hiding and showing the dropdown content */
         function productMenu() {
             document.getElementById("myDropdown").classList.toggle("show");
-            if (document.getElementById("productsLink").innerHTML == "Products &#8594;") {
-                document.getElementById("productsLink").innerHTML = "Products &#8628;";
+            if (document.getElementById("productsLink").innerHTML == "Products &#x2192;") {
+                document.getElementById("productsLink").innerHTML = "Products &#x21B4;";
             }else{
-                document.getElementById("productsLink").innerHTML = "Products &#8594;";
+                document.getElementById("productsLink").innerHTML = "Products &#x2192;";
             }
         }
 
@@ -36,7 +36,7 @@
        // Close the dropdown menu if the user clicks outside of it
        window.onclick = function (event) {
            if (!event.target.matches('.dropbtn2')) {
-               document.getElementById("productsLink").innerHTML = "Products &#8594;";
+               document.getElementById("productsLink").innerHTML = "Products &#x2192;";
                var dropdowns = document.getElementsByClassName("dropdown-content2");
                var i;
                for (i = 0; i < dropdowns.length; i++) {
