--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,7 @@
        window.onclick = function (event) {
            if (!event.target.matches('.dropbtn2')) {
                document.getElementById("productsLink").innerHTML = "Products &#x2192;";
+               showing = false;
                var dropdowns = document.getElementsByClassName("dropdown-content2");
                var i;
                for (i = 0; i < dropdowns.length; i++) {
