--- a/contactus.htm
+++ b/contactus.htm
@@ -64,7 +64,7 @@
         <div class="dropdown-content" style="text-align:center; left:10px;">
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
-            <div class="dropdown2">
+            <div onmouseover="mouseOverProducts()" onmouseout="mouseLeaveProducts()" class="dropdown2">
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
                 <div id="myDropdown" class="dropdown-content2" style="left:10px;">
                     <a href="assets.htm">Assets</a>
