--- a/index.htm
+++ b/index.htm
@@ -64,9 +64,9 @@
         <div class="dropdown-content" style="text-align:center; left:10px;">
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
-            <div onmouseout="mouseLeaveProducts()" class="dropdown2">
+            <div class="dropdown2">
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
-                <div id="myDropdown" class="dropdown-content2" style="left:10px;">
+                <div onmouseout="mouseLeaveProducts()" id="myDropdown" class="dropdown-content2" style="left:10px;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
                 </div>
