--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
-                <div onmouseout="mouseLeaveProducts()" id="myDropdown" class="dropdown-content2" style="left:10px;">
+                <div id="myDropdown" class="dropdown-content2" style="left:10px;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
                 </div>
