--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,10 @@
 
         function mouseLeaveMenu()
         {
-            document.getElementById("mainMenu").innerHTML = "Menu &#8594;";                    
+            document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
+            if (showing) {
+                productMenu();
+            }
         }
 
        // Close the dropdown menu if the user clicks outside of it
