--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,11 @@
         function mouseLeaveMenu()
         {
             document.getElementById("mainMenu").innerHTML = "Menu &#8594;"; 
-            
+            if (document.getElementById("content").style.display == 'none') {
+                if (showing) {
+                    productMenu();
+                }
+            }
         }
 
        // Close the dropdown menu if the user clicks outside of it
@@ -62,7 +66,7 @@
 
     <div onmouseover="mouseOverMenu()" onmouseout="mouseLeaveMenu()" class="dropdown" style="float:left;">
         <a class="dropbtn1" id="mainMenu">Menu &#8594;</a>
-        <div class="dropdown-content" style="text-align:center; left:15px;">
+        <div class="dropdown-content" id="content" style="text-align:center; left:15px;">
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
