--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,14 @@
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>
     </div>
+    <div class="textAlignCenter" style="align-content:center;">
+        <h3 class="first fontMain color1" style="font-size:30px">
+            <em>Our assets are compatible with all major game engines.</em>
+        </h3>
+        <h3>
+            <img src="images/unity3d-logo.png"/>
+        </h3>
+    </div>
     <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
