--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,7 @@
             <em>Our assets are compatible with all major game engines.</em>
         </h3>
         <h3>
-            <img src="images/unity3d-logo.png"/>
+            <img src="images/unity3d-logo.png" width="300" height="127"/>
         </h3>
     </div>
     <div class="overlay" style="font-size: 10px">
