--- a/index.htm
+++ b/index.htm
@@ -54,6 +54,7 @@
         <h3>
             <img src="images/unity3d-logo.png" width="300" height="127"/>
             <img src="images/unreal-engine-logo.png" width="300" height="127" />
+            <img src="images/cry-engine-logo.png" width="300" height="127" />
         </h3>
     </div>
     <div class="overlay" style="font-size: 10px">
