--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,9 @@
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
     <style>
-        .botMargin
+        .botAlign
         {
-            margin-bottom: 15%;
+            bottom:0;
         }
     </style>
 </head>
@@ -41,13 +41,13 @@
 
         <hr />
         <br />
-        <h3 class="first fontMain color1 botMargin" style="font-size:30px">
+        <h3 class="first fontMain color1" style="font-size:30px">
             Are you an independent game developer looking to take your graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>
     </div>
-    <div class="textAlignCenter" style="align-content:center;">
+    <div class="textAlignCenter botAlign" style="align-content:center;">
         <h3 class="first fontMain color1" style="font-size:30px">
             <em>Our assets are compatible with all major game engines.</em>
         </h3>
