--- a/contactus.htm
+++ b/contactus.htm
@@ -15,7 +15,7 @@
         <a class="dropbtn1" id="mainMenu">Menu &#8594;</a>
         <div class="dropdown-content" id="content" style="text-align:center; left:15px;">
             <a href="index.htm">Home</a>
-            <a href="contactus.htm">Contact Us</a>
+            <a href="contactus.htm">Contact Us &#60;</a>
             <div class="dropdown2">
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
                 <div id="myDropdown" class="dropdown-content2" style="left:8px;">
