--- a/packages.htm
+++ b/packages.htm
@@ -19,7 +19,7 @@
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
                 <div id="myDropdown" class="dropdown-content2" style="left:8px;">
                     <a href="assets.htm">Assets</a>
-                    <a href="packages.htm">Packages &#60;</a>
+                    <a href="packages.htm">Packages</a>
                 </div>
             </div>
         </div>
