--- a/assets.htm
+++ b/assets.htm
@@ -18,7 +18,7 @@
             <div class="dropdown2">
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
                 <div id="myDropdown" class="dropdown-content2" style="left:8px;">
-                    <a href="assets.htm">Assets</a>
+                    <a href="assets.htm">Assets &hearts;</a>
                     <a href="packages.htm">Packages</a>
                 </div>
             </div>
