--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Next Generation Game Assets<br /></h2>
 
-        <hr />
+        <img src="images/Hr.png" width="1920" height="10" />
         <br />
         <h3 class="first fontMain color1" style="font-size:30px">
             Are you an independent game developer looking to take your graphics to the next level? <br />
