--- a/assets.htm
+++ b/assets.htm
@@ -31,7 +31,7 @@
         </header>
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Assets<br /></h2>
-        <hr />
+        <img src="images/Hr.png" width="1920" height="4" />
         <br />
 
         <table rules="all" class="fontMain color1" style="font-size:30px">
