--- a/assets.htm
+++ b/assets.htm
@@ -6,6 +6,12 @@
     <link rel="stylesheet" type="text/css" href="Style2.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
+    <style>
+        .marginIncrease 
+        {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,7 +37,7 @@
         </header>
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Assets<br /></h2>
-        <img src="images/Hr.png" width="1920" height="4" />
+        <img class="marginIncrease" src="images/Hr.png" width="1920" height="4" />
         <br />
 
         <table rules="all" class="fontMain color1" style="font-size:30px">
