--- a/assets.htm
+++ b/assets.htm
@@ -9,6 +9,7 @@
     <style>
         .marginIncrease 
         {
+            margin-top: 10px;
             margin-bottom: 17px;
         }
     </style>
