--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,11 @@
             margin-top: 4cm;
             margin-bottom: 1cm;
         }
+        .spreadImgs
+        {
+            margin-left: 15px;
+             margin-right: 15px;
+        }
     </style>
 </head>
 
@@ -52,9 +57,9 @@
             <em>Our assets are compatible with all major game engines.</em>
         </h3>
         <h3>
-            <img src="images/unity3d-logo.png" width="300" height="127"/>
-            <img src="images/unreal-engine-logo.png" width="300" height="127" />
-            <img src="images/cry-engine-logo.png" width="300" height="127" />
+            <img class="spreadImgs" src="images/unity3d-logo.png" width="300" height="127"/>
+            <img class="spreadImgs" src="images/unreal-engine-logo.png" width="300" height="127" />
+            <img class="spreadImgs" src="images/cry-engine-logo.png" width="300" height="127" />
         </h3>
     </div>
     <div class="overlay" style="font-size: 10px">
