--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
 
     <div class="textAlignCenter" style="align-content:center;">
         <header class="backgroundTransparent">
-            <h1 class="color1 fontSpaceman" style="font-size:55px">DIMENSION<br />ASSETS<br /></h1>
+            <h1 class="color1 fontSpaceman" style="font-size:55px">dimension<br />assets<br /></h1>
         </header>
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Next Generation Game Assets<br /></h2>
