--- a/index.htm
+++ b/index.htm
@@ -53,6 +53,51 @@
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>
     </div>
+
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 5</div>
+            <img src="images/character.jpg" style="width:100%">
+            <div class="text">Character Models</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 5</div>
+            <img src="images/texture.jpg" style="width:100%">
+            <div class="text">HD Textures</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 5</div>
+            <img src="images/landscape.jpg" style="width:100%">
+            <div class="text">Landscapes</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">4 / 5</div>
+            <img src="images/item.jpg" style="width:100%">
+            <div class="text">Objects</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">5 / 5</div>
+            <img src="images/structure.jpg" style="width:100%">
+            <div class="text">Environments</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
+
     <div class="textAlignCenter" style="align-content:center;">
         <h3 class="first fontMain color1 botAlign" style="font-size:30px">
             <em>Our assets are compatible with all major game engines.</em>
