--- a/index.htm
+++ b/index.htm
@@ -58,31 +58,31 @@
         <div class="mySlides fade">
             <div class="numbertext">1 / 5</div>
             <img src="images/character.jpg" style="width:100%">
-            <div class="text">Character Models</div>
+            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Character Models</h3></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 5</div>
             <img src="images/texture.jpg" style="width:100%">
-            <div class="text">HD Textures</div>
+            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">HD Textures</h3></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 5</div>
             <img src="images/landscape.jpg" style="width:100%">
-            <div class="text">Landscapes</div>
+            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Landscapes</h3></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">4 / 5</div>
             <img src="images/item.jpg" style="width:100%">
-            <div class="text">Objects</div>
+            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Objects</h3></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">5 / 5</div>
             <img src="images/structure.jpg" style="width:100%">
-            <div class="text">Environments</div>
+            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Environments</h3></div>
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
