--- a/index.htm
+++ b/index.htm
@@ -53,6 +53,8 @@
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>
     </div>
+    <img class="marginIncrease" src="images/Hr.png" width="100%" height="1%" />
+    <br />
 
     <div class="slideshow-container">
         <div class="mySlides fade">
