--- a/assets.htm
+++ b/assets.htm
@@ -71,6 +71,17 @@
 
         </table>
     </div>
+    <div class="textAlignCenter" style="align-content:center;">
+        <h3 class="first fontMain color1 botAlign" style="font-size:30px">
+            <em>Our assets are compatible with all major game engines.</em>
+        </h3>
+        <h3>
+            <img class="spreadImgs" src="images/unity3d-logo.png" width="300" height="127" />
+            <img class="spreadImgs" src="images/unreal-engine-logo.png" width="300" height="127" />
+            <img class="spreadImgs" src="images/cry-engine-logo.png" width="300" height="127" />
+        </h3>
+    </div>
+    <br />
     <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
