--- a/packages.htm
+++ b/packages.htm
@@ -32,7 +32,7 @@
         </header>
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Packages<br /></h2>
-        <img class="marginIncrease" src="images/Hr.png" width="100%" height="1%" />
+        <img class="marginIncrease" src="images/Hr.png" width="auto" height="9px" />
 
         <table rules="all" class="fontMain color1" style="font-size:30px">
 
@@ -70,6 +70,17 @@
 
         </table>
     </div>
+    <div class="textAlignCenter" style="align-content:center;">
+        <h3 class="first fontMain color1 botAlign" style="font-size:30px">
+            <em>Our assets are compatible with all major game engines.</em>
+        </h3>
+        <h3>
+            <img class="spreadImgs" src="images/unity3d-logo.png" width="300" height="127" />
+            <img class="spreadImgs" src="images/unreal-engine-logo.png" width="300" height="127" />
+            <img class="spreadImgs" src="images/cry-engine-logo.png" width="300" height="127" />
+        </h3>
+    </div>
+    <br />
     <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
