--- a/spacerace.htm
+++ b/spacerace.htm
@@ -9,7 +9,15 @@
 </head>
 
 <body>
+    <div class="title">
+        The Great Space Race
+    </div>
+    <div src="srimages/RedLight.png" style="width: 256px; height: 256px;">
 
+    </div>
+    <div class="ship1"><img src="srimages/Ship1.png" style="width: 57px; height: 55px;"></div>
+   
+    <div class="ship2"><img src="srimages/Ship2.png" style="width: 58px; height: 57px;"></div>
      
 </body>
 </html>
