--- a/spacerace.htm
+++ b/spacerace.htm
@@ -19,15 +19,14 @@
 
                 <div class="goLight"><a id="startButton" onclick="GameStarted()" class="lightButton"></a></div>
 
-                <div id="ship1" class="ship"><img src="srimages/Ship4.png" style="width: 61px; height: 58px; margin-top: 250%;" /></div>
+                <div id="ship1" class="ship"><img src="srimages/Ship4speed.png" style="width: 100px; height: 100px; margin-top: 200px;" /></div>
 
-                <div id="ship2" class="ship"><img src="srimages/Ship2.png" style="width: 58px; height: 57px; margin-top: 450%;" /></div>
+                <div id="ship2" class="ship"><img src="srimages/Ship2speed.png" style="width: 100px; height: 100px; margin-top: 350px;" /></div>
 
-                <div id="ship3" class="ship"><img src="srimages/Ship3.png" style="width: 60px; height: 53px; margin-top: 600%;" /></div>
+                <div id="ship3" class="ship"><img src="srimages/Ship3speed.png" style="width: 100px; height: 100px; margin-top: 500px;" /></div>
 
-                <div id="ship4" class="ship"><img src="srimages/Ship1.png" style="width: 57px; height: 55px; margin-top: 800%;" /></div>
+                <div id="ship4" class="ship"><img src="srimages/Ship1speed.png" style="width: 100px; height: 100px; margin-top: 650px;" /></div>
 
-                <div id="ship5" class="ship"><img src="srimages/Ship5.png" style="width: 57px; height: 58px; margin-top: 975%;" /></div>
             </div>
         </div>
     </div>
